<resources>
    <string name="app_name">GoHorse</string>
    <string name="registration">Регистрация</string>
    <string name="login">Логин</string>
    <string name="name">Имя</string>
    <string name="surename">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="birthdate">Дата рождения</string>
    <string name="password">Пароль</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="authorization">Авторизация</string>
    <string name="auth">Войти</string>
    <string name="create_new_account">Создать аккаунт</string>
    <string name="authirizate">Авторизоваться</string>
    <string name="email">Почта</string>
    <string name="number">Номер телефона</string>
    <string name="orderText">Забронировать занятие</string>
</resources>